# phaser

./: .gitattributes  .gitignore  README.md  conftest.py  index.ipynb  mkdocs.yml  mos2_epie.yaml  mos2_lsqml.yaml  pyproject.toml  run_examples.ipynb  si.yaml  si_epie.yaml  si_lsqml.yaml  srtio3.yaml  test.yaml  test2.yaml
.binder/: postBuild  requirements.txt
.github/scripts/: get_versioninfo.py
.github/workflows/: ci.yaml  docs.yaml
benchmarks/: mos2.py  si.py
docs/api/: state.md
docs/using/: algorithms.md  conventions.md  engines.md  plan.md  starting.md
examples/: mos2_epie.yaml  mos2_grad.yaml  mos2_grad_polyak.yaml  mos2_lsqml.yaml  optuna_study.py  prsco3_grad.yaml  prsco3_lsqml.yaml  si_epie.yaml  si_grad.yaml  si_grad_exp.yaml  si_lsqml.yaml  si_lsqml_exp.yaml  srtio3.yaml  srtio3_exp.yaml  srtio3_exp_grad.yaml
notebooks/: conventions.ipynb  ground_truth.ipynb  multilayer-regularization.ipynb  position-correction-testing.ipynb  position-correction-testing_old.ipynb  reconstruct-MLs.ipynb  reconstruct-MLs_gpu.ipynb  reconstruct-MLs_standalone.ipynb  reconstruct-ePIE.ipynb  reconstruct-ePIE_standalone.ipynb  reconstruct.ipynb  reconstruct_ePIE.ipynb  reconstruct_slim.ipynb
phaser/: __main__.py  execute.py  main.py  observer.py  plan.py  state.py  types.py
phaser/engines/common/: noise_models.py  output.py  position_correction.py  regularizers.py  simulation.py
phaser/engines/conventional/: detector_models.py  run.py  solvers.py  update.py
phaser/engines/gradient/: run.py  solvers.py
phaser/hooks/: __init__.py  conventional.py  hook.py  object.py  preprocessing.py  probe.py  regularization.py  scan.py  schedule.py  solver.py  tilt.py
phaser/hooks/io/: empad.py
phaser/io/: empad.py
phaser/utils/: _cuda_kernels.py  _jax_kernels.py  _kernels.py  analysis.py  filter.py  image.py  io.py  misc.py  num.py  object.py  optics.py  physics.py  plotting.py  scan.py
phaser/web/: .gitignore  notebook.py  package-lock.json  package.json  routes.py  server.py  slurm.py  slurm_worker.sh  tsconfig.json  types.py  util.py  webpack.config.cjs  webpack.config.js  worker.py
phaser/web/src/: AppShell.module.css  Tabs.module.css  components.tsx  custom.d.ts  dashboard.ts  dashboard.tsx  header.tsx  manager.ts  manager.tsx  optics.ts  organization.tsx  plot.ts  plots.tsx  requests.tsx  scalebar.ts  section.tsx  socket.ts  style.css  theme.tsx  types.tsx  wasm-array.ts  websocket.tsx
phaser/web/src/plotting/: colorbar.tsx  plot.tsx  plots.module.css  scale.ts  scalebar.tsx  transform.ts  zoom.tsx
phaser/web/static/: styles.css
phaser/web/templates/: base.html  dashboard.html  manager.html
tests/: test_empad.py  test_image.py  test_initialization.py  test_misc.py  test_num.py  test_object.py  test_optics.py  test_physics.py  utils.py
tests/expected/: fresnel_200kV_1nm_phase.tiff  object_add_views.tiff  object_add_views_complex_mag.tiff  object_add_views_complex_phase.tiff  object_add_views_float.tiff  object_add_views_uint8.tiff  object_get_views_complex.npy  object_get_views_float.npy  object_get_views_uint8.npy  object_set_views_complex_mag.tiff  object_set_views_complex_phase.tiff  object_set_views_float.tiff  object_set_views_uint8.tiff  probe_10mrad_20over_mag.tiff  probe_10mrad_20over_phase.tiff  probe_10mrad_focused_mag.tiff  resample_downsample_order0_rot0.0.tiff  resample_downsample_order1_rot0.0.tiff  resample_identity_order1_rot0.0.tiff  resample_pad_order0_rot0.0.tiff  resample_upsample_order0_rot0.0.tiff  resample_upsample_order0_rot30.0.tiff  resample_upsample_order1_rot0.0.tiff  resample_upsample_order1_rot30.0.tiff
tests/input_files/: metadata_v2.json  sim_metadata.json
