[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phaser"
version = "0.1"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"}
]
description = "Weapon of choice for electron ptychographic reconstructions"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22,<2.3",  # tested on 1.26, 2.0
    "scipy>=1.7.0,<1.16", # tested on 1.11, 1.13
    "matplotlib~=3.8",
    "h5py~=3.8",
    "pyyaml>=5.3.1",
    "click~=8.1.0",
    "rich~=12.0.0",
    "tifffile>=2023.8.25",
    "k-means-constrained>=0.7.3",  # required for compact groupings
    "py-pane==0.9.1",
    "typing_extensions~=4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
]
cuda = [
    "cupy-wheel",
    "pynvml>=11.0.0",
]
jax = [
    # 0.4.25 is last version supporting cuda 11.8, we need to support it.
    # tested on 0.4.25 & 0.5.1
    "jax>=0.4.25,<0.5.2",  
    "optax>=0.2.2",
]
web = [
    "Quart>=0.19.5",
    "backoff==2.2.1",
    "requests>=2.31.0",
    "aiostream>=0.6.4",
]

[tool.setuptools]
packages = ["phaser"]

[project.scripts]
phaser = "phaser.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: Run on CUDA backend",
    "jax: Run on jax backend",
    "cpu: Run on CPU backend",
    "slow: mark a test as slow",

    "expected_filename: Filename to load expected result from",
]

